--- a/less/header.less
+++ b/less/header.less
@@ -50,6 +50,7 @@
     top: 0;
     right: 0;
     opacity: .8;
+    z-index: 1;
   }
 
   .primary-nav {
@@ -146,7 +147,7 @@
 
   .navbar-toggle {
     margin: 0;
-    z-index: 1;
+    z-index: 2;
     background-color: white;
   }
 }
